--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-*{
-    boarder: 8px;
-    background-color: red;
-    margin: 0px 0px;
+.div{
+    border-color: red;
+    border-radius: 4px;
+    color: white;
+    font-family:Arial, "Helvetica", sans-serif;
+    font-size: 16px;
+    border-width: solid;
 }
