--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
-.div{
-    border-color: red;
-    border-radius: 4px;
-    color: white;
-    font-family:Arial, "Helvetica", sans-serif;
-    font-size: 16px;
-    border-width: solid;
+*{
+    background-color: lightpink;
+    color: black;
+}
+
+.title{
+    background-color: blue;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold; 
+}
+
+.menu{
+    background-color: white;
+    color: blue;
+    border: 8px;
 }
